# rs-parquet-schema-show

./: Cargo.toml  README.md  rs-parquet-schema-show  run.sh
sample.d/: input.parquet
src/: lib.rs  main.rs
