[package]
name = "rs-parquet-schema-show"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.arrow]
version = "56"
default-features = false
features = [
]

[dependencies.arrow-schema]
version = "56"
default-features = false
features = [
	"serde",
]

[dependencies.parquet]
version = "56"
default-features = false
features = [
	"arrow",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]
